--- a/webBanTiVi/src/main/resources/templates/admin/page/product/product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/product.html
@@ -1,18 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Drag & Drop File Upload</title>
+    <link rel="stylesheet" href="/admin/assets/css/app.css"/>
+</head>
+<body>
 <div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">UI elements /</span> Product</h4>
-
     <div class="row">
         <!-- Basic Badges -->
         <div class="col-lg">
-            <div class="card mb-4">
-                <h5 class="card-header">Basic Badges</h5>
+            <div class="card mb-4"><h5 class="card-header">Basic Product</h5>
                 <div class="card-body">
-                    <div class="mb-3 row">
-                        <label class="col-md-2 col-form-label">Id</label>
-                        <div class="col-md-10">
-                            <input class="form-control" type="text" placeholder="id" id="html5-text-input1">
+                    <div class="row">
+                        <!-- Basic Badges -->
+                        <div class="col-lg">
+                            <div class="cards">
+                                <div class="top">
+                                    <p>Dropzone Image Uploading</p>
+                                    <br>
+                                    <button type="button">Upload</button>
+                                </div>
+                                <form style="width: 100%;
+    height: 100px;
+    border-radius: 5px;
+    border: 2px dashed #d5d5e1;
+    color: #c8c9dd;
+    font-size: 0.9rem;
+    font-weight: 500;
+    background: #dfe3f259;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    margin-top: 20px;" action="/upload" method="post" class="dragover">
+        <span class="inner">Drop Image here or <span class="select">Browse</span>
+        </span>
+                                    <input name="file" type="file" class="file" multiple/>
+                                </form>
+                                <div class="container">
+
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <!--                </div>-->
+                    <hr>
+
+                    <!--                <div class="card-body">-->
                     <div class="mb-3 row">
                         <label class="col-md-2 col-form-label">Code</label>
                         <div class="col-md-10">
@@ -41,33 +78,13 @@
                         </div>
                     </div>
                 </div>
-                <hr>
-                <div class="card-body">
-                    <div class="d-flex align-items-start align-items-sm-center gap-4">
-                        <img src="../assets/img/avatars/1.png" alt="user-avatar" class="d-block rounded" height="100"
-                             width="100" id="uploadedAvatar">
-                        <div class="button-wrapper">
-                            <label for="upload" class="btn btn-primary me-2 mb-4" tabindex="0">
-                                <span class="d-none d-sm-block">Upload new photo</span>
-                                <i class="bx bx-upload d-block d-sm-none"></i>
-                                <input type="file" id="upload" class="account-file-input" hidden=""
-                                       accept="image/png, image/jpeg">
-                            </label>
-                            <button type="button" class="btn btn-outline-secondary account-image-reset mb-4">
-                                <i class="bx bx-reset d-block d-sm-none"></i>
-                                <span class="d-none d-sm-block">Reset</span>
-                            </button>
 
-                            <p class="text-muted mb-0">Allowed JPG, GIF or PNG. Max size of 800K</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
         <!-- Label Badges -->
         <div class="col-lg">
             <div class="card mb-4">
-                <h5 class="card-header">Label Badges</h5>
+                <h5 class="card-header">Label Product</h5>
                 <div class="card-body">
                     <div class="row">
                         <!-- Modal Backdrop -->
@@ -76,7 +93,7 @@
                             <div class="mt-3">
                                 <div class="input-group">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                            data-bs-target="#backDropModal">
+                                            data-bs-target="#backDropModal" style="width: 135px">
                                         Brand
                                     </button>
                                     <select class="form-select"
@@ -136,7 +153,7 @@
                             <div class="mt-3">
                                 <div class="input-group">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                            data-bs-target="#backDropModal">
+                                            data-bs-target="#backDropModal" style="width: 135px">
                                         Guarantee
                                     </button>
                                     <select class="form-select"
@@ -197,7 +214,7 @@
                                 <!-- Button trigger modal -->
                                 <div class="input-group">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                            data-bs-target="#backDropModal">
+                                            data-bs-target="#backDropModal" style="width: 135px">
                                         Origin
                                     </button>
                                     <select class="form-select"
@@ -258,7 +275,7 @@
                                 <!-- Button trigger modal -->
                                 <div class="input-group">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                            data-bs-target="#backDropModal">
+                                            data-bs-target="#backDropModal" style="width: 135px">
                                         Manufacture
                                     </button>
                                     <select class="form-select"
@@ -319,7 +336,7 @@
                                 <!-- Button trigger modal -->
                                 <div class="input-group">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                            data-bs-target="#backDropModal">
+                                            data-bs-target="#backDropModal" style="width: 135px">
                                         Color
                                     </button>
                                     <select class="form-select"
@@ -380,7 +397,7 @@
                                 <!-- Button trigger modal -->
                                 <div class="input-group">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                            data-bs-target="#backDropModal">
+                                            data-bs-target="#backDropModal" style="width: 135px">
                                         Category
                                     </button>
                                     <select class="form-select"
@@ -441,7 +458,7 @@
                                 <!-- Button trigger modal -->
                                 <div class="input-group">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                            data-bs-target="#backDropModal">
+                                            data-bs-target="#backDropModal" style="width: 135px">
                                         Resolution
                                     </button>
                                     <select class="form-select"
@@ -502,7 +519,7 @@
                                 <!-- Button trigger modal -->
                                 <div class="input-group">
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                            data-bs-target="#backDropModal">
+                                            data-bs-target="#backDropModal" style="width: 135px">
                                         Size
                                     </button>
                                     <select class="form-select" id="inputGroupSelect03"
@@ -559,9 +576,8 @@
                         <!-- Modal Backdrop -->
                     </div>
                 </div>
-            </div>
-            <!-- button share -->
-            <div class="card mb-4">
+                <hr>
+                <!-- button share -->
                 <h5 class="card-header">Add product badges</h5>
                 <div class="card-body">
                     <div class="mt-2">
@@ -572,46 +588,51 @@
             </div>
         </div>
     </div>
+</div>
 
-    <div class="row">
-        <!-- Button with Badges -->
-        <div class="col-lg">
-            <div class="card mb-4">
-                <h5 class="card-header">Table Product</h5>
-                <div class="card-body">
-                    <table class="table">
-                        <thead>
+<div class="row">
+    <!-- Button with Badges -->
+    <div class="col-lg">
+        <div class="card mb-4">
+            <h5 class="card-header">Table Product</h5>
+            <div class="card-body">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Code</th>
+                        <th>Name</th>
+                        <th>Price Import</th>
+                        <th>Price Export</th>
+                        <th>Quantity</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <c:forEach var="item" items="${items}">
                         <tr>
-                            <th>Id</th>
-                            <th>Code</th>
-                            <th>Name</th>
-                            <th>Price Import</th>
-                            <th>Price Export</th>
-                            <th>Quantity</th>
-                            <th></th>
+                            <td>${item.id}</td>
+                            <td>${item.name}</td>
+                            <td>${item.price}</td>
+                            <td>${item.category.name}</td>
+                            <td><p><img src="/static/images/${item.image}" alt="car_image"
+                                        style="height: 50px; width: 50px"/></p>
+                            </td>
+                            <td>
+                                <a class="btn btn-sm btn-primary" href="/admin/product/edit/${item.id}">Edit</a>
+                                <a class="btn btn-sm btn-danger" href="/admin/product/delete/${item.id}">Delete</a>
+                            </td>
                         </tr>
-                        </thead>
-                        <tbody>
-                        <c:forEach var="item" items="${items}">
-                            <tr>
-                                <td>${item.id}</td>
-                                <td>${item.name}</td>
-                                <td>${item.price}</td>
-                                <td>${item.category.name}</td>
-                                <td><p><img src="/static/images/${item.image}" alt="car_image"
-                                            style="height: 50px; width: 50px"/></p>
-                                </td>
-                                <td>
-                                    <a class="btn btn-sm btn-primary" href="/admin/product/edit/${item.id}">Edit</a>
-                                    <a class="btn btn-sm btn-danger" href="/admin/product/delete/${item.id}">Delete</a>
-                                </td>
-                            </tr>
-                        </c:forEach>
-                        </tbody>
-                    </table>
-                </div>
+                    </c:forEach>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 </div>
+</div>
 <hr>
+<!-- Script -->
+<script src="/admin/assets/js/api.js"></script>
+</body>
+</html>
