--- a/webBanTiVi/src/main/resources/templates/admin/page/customer/customer.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/customer/customer.html
@@ -99,8 +99,21 @@
                                         >Khóa</label>
                                     </div>
                                 </div>
-
-
+                                <div class="col-sm-4">
+                                    <div class="mt-3">
+                                        <div class="input-group">
+                                            <button type="button" class="btn btn-primary">
+                                                Role
+                                            </button>
+                                            <select class="form-select"
+                                                    aria-label="Example select with button addon"
+                                                    th:name="roles">
+                                                <option th:value="ADMIN">Admin</option>
+                                                <option th:value="STAFF">User</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -311,6 +324,28 @@
                                                         </div>
                                                     </div>
 
+                                                    <div class="col-sm-4 p-3">
+                                                        <div class="mt-3">
+                                                            <div class="input-group">
+                                                                <button type="button" class="btn btn-primary">
+                                                                    Role
+                                                                </button>
+                                                                <select class="form-select"
+                                                                        aria-label="Example select with button addon"
+                                                                        th:name="roles">
+                                                                    <option th:value="ADMIN"
+                                                                            th:selected="${customer.roles=='ADMIN'}">Admin
+                                                                    </option>
+                                                                    <option th:value="STAFF"
+                                                                            th:selected="${customer.roles=='STAFF'}">Staff
+                                                                    </option>
+                                                                    <option th:value="STAFF"
+                                                                            th:selected="${customer.roles=='USER'}">User
+                                                                    </option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <br>
