--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -32,7 +32,7 @@
 
         <li th:class="${#strings.contains(session.active,'/product')?'menu-item active open':'menu-item'}">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons bx bx-receipt"></i>
+                <i class='menu-icon tf-icons bx bx-package'></i>
                 <div>Sản phẩm</div>
             </a>
             <ul class="menu-sub">
