--- a/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
@@ -23,8 +23,8 @@
                 <td th:text="${productStat.index+1}"></td>
                 <td th:text="${product.nameProduct}"></td>
                 <td th:text="${product.quantity}"></td>
-                <td th:text="${product.priceImport}"></td>
-                <td th:text="${product.priceExport}"></td>
+                <td th:text="${#numbers.formatDecimal(product.priceImport,0,'COMMA',0,'POINT')}"></td>
+                <td th:text="${#numbers.formatDecimal(product.priceExport,0,'COMMA',0,'POINT')}"></td>
                 <td class="form-switch text-center"><input class="form-check-input" type="checkbox" th:checked="${product.active}"></td>
                 <td>
                     <div class="dropdown">
