--- a/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
@@ -44,6 +44,14 @@
                                     </div>
                                 </div>
                                 <div class="mb-3">
+                                    <label class="form-label">Ngày bắt đầu:</label>
+                                    <input type="date" class="form-control" th:name="dateStart">
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label">Ngày kết thúc:</label>
+                                    <input type="date" class="form-control" th:name="dateEnd"/>
+                                </div>
+                                <div class="mb-3">
                                     <label class="form-label">Trạng thái:</label>
                                     <div>
                                         <div class="form-check form-check-inline mt-3">
@@ -171,8 +179,18 @@
                                                         <div class="input-group">
                                                             <input type="number" class="form-control" th:name="value"
                                                                    th:value="${coupon.value}">
-                                                            <span class="input-group-text">VNĐ</span>
+                                                            <span class="input-group-text">%</span>
                                                         </div>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label class="form-label">Ngày bắt đầu:</label>
+                                                        <input type="date" class="form-control" th:name="dateStart"
+                                                               th:value="${coupon.dateStart}"/>
+                                                    </div>
+                                                    <div class="mb-3">
+                                                        <label class="form-label">Ngày kết thúc:</label>
+                                                        <input type="date" class="form-control" th:name="dateEnd"
+                                                               th:value="${coupon.dateEnd}"/>
                                                     </div>
                                                     <div class="mb-3">
                                                         <label class="form-label">Trạng thái :</label>
@@ -198,7 +216,7 @@
                                             <br>
                                             <div class="row justify-content-xl-end">
                                                 <div class="w-auto">
-                                                    <a th:href="@{'/admin/couponproduct/' + *{id}}"
+                                                    <a th:href="@{'/admin/discountproduct/' + *{id}}"
                                                        class="btn btn-primary btn-control">Các sản phẩm được giảm</a>
                                                 </div>
                                                 <div class="w-auto">
